sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:16: error: value beg is not a member of Unit
possible cause: maybe a semicolon is missing before `value beg'?
  }beg = beg + 1}
   ^